--- a/Android/Maintenance/app/src/main/res/values/strings.xml
+++ b/Android/Maintenance/app/src/main/res/values/strings.xml
@@ -1,15 +1,15 @@
 <resources>
     <string name="app_name">Maintenance</string>
-    <string name="client_id">Client Id</string>
+    <string name="client_id">Client Name</string>
     <string name="asset_type">Asset Type</string>
-    <string name="make_id">Make Id</string>
+    <string name="make_id">Make</string>
     <string name="asset_no">Asset No</string>
-    <string name="model_id">Model Id</string>
-    <string name="date_install">Date Install</string>
-    <string name="date_mfg">Date MFG</string>
-    <string name="inst_sl_no">INST SL NO</string>
-    <string name="mfg_sl_no">MFG SL NO</string>
-    <string name="asset_description">Asset Description</string>
+    <string name="model_id">Model</string>
+    <string name="date_install">Date of Installment</string>
+    <string name="date_mfg">Date of Manufacture</string>
+    <string name="inst_sl_no">Instrument  Sl No</string>
+    <string name="mfg_sl_no">Manufacturer Sl No</string>
+    <string name="asset_description">Asset Name</string>
     <string name="client_asset_registration">Client Asset Registration</string>
     <string name="add">ADD</string>
     <string name="client_registration">Client Registration</string>
@@ -32,4 +32,31 @@
     <string name="login">Login</string>
     <string name="signup">Register</string>
     <string name="register_header_text">Signup</string>
+    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
+    <string name="forgotlable">Forgot Password</string>
+    <string name="registerlable">Register</string>
+
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="reset_password">Reset password</string>
+    <string name="client_email"> Client Email</string>
+    <string name="website">Website</string>
+    <string name="title_activity_client_main">"Client "</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="client_approval_list_headertxt">Client Approval List</string>
 </resources>
