--- a/Android/Maintenance/app/src/main/res/values/strings.xml
+++ b/Android/Maintenance/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="client_approval_list_headertxt">Client Approval List</string>
     <string name="title_activity_user_main">UserMainActivity</string>
+    <string name="title_activity_employee_main">EmployeeMainActivity</string>
 </resources>
